 
Improvements:
Performance Testing: Graph and non-graph display are labeled as PUT or GET.
Versioning: Latest file will be in blue. Deleted files will be in red.
Versioning: Version enabled buckets will be displayed in green.
Upgraded S3 API to 1.9.3
GUI creates and deletes buckets in a background thread to be more responsive.

New Features:
Command-line interface: put, get, delete, makebucket, rmbucket, listbuckets, syncfroms3, and synctos3.
Performance testing available from the command-line

Features:

1. Tier buckets to and from Amazon Glacier.
2. Sync files to and from S3 storage.
3. Stream music.
4. Text editor.
5. Modify Bucket and Object ACL's.
6. Take screen shots and upload them to your bucket.
7. Bucket versioning and life cycles.
8. Graphical and console based background syncing.
9. Store multiple Amazon S3 accounts.
10. Image viewer.
11. Migrate buckets between S3 accounts.
12. Bucket search.
13. Performance testing with graphs.
14. Command-line interface.
15. IRC client that allows you to save chat sessions to S3.


Command-line Options:

java -jar CloudExplorer.jar put filename bucket
java -jar CloudExplorer.jar get filename bucket destination
java -jar CloudExplorer.jar delete filename bucket 

#List bucket contents
java -jar CloudExplorer.jar ls bucket

#List buckets
java -jar CloudExplorer.jar listbuckets

#Delete a bucket
java -jar CloudExplorer.jar rmbucket bucket

#Create a bucket
java -jar CloudExplorer.jar makebucket bucket

#Sync to S3
java -jar CloudExplorer.jar synctos3 location bucket

#Sync from S3
java -jar CloudExplorer.jar syncfroms3 destination bucket

#Performance Test - PUT
java -jar CloudExplorer.jar uploadtest bucket size threads operations

#Performance Test - GET
java -jar CloudExplorer.jar downloadtest bucket size threads operations

#Search for files 
java -jar CloudExplorer.jar search bucket what


*Please note that Cloud Explorer will use the first account listed in the config file*